--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     
 
-    <aside class="aside sticky-xl-top text-muted align-self-start">
+    <aside class="Lateral sticky-xl-top text-muted align-self-start">
         <nav class="small" id="toc">
             <h2 class="centrar border-bottom">Cursos</h2>
             <ul class="list-unstyled">
