--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- estilos propios -->
     <link href="./Apoyo/main.css" rel="stylesheet">
 
-    <script type="text/javascript" src="./Funcion.js"></script>
+    <script type="text/javascript" src="./Apoyo/Funcion.js"></script>
 
     
 
