--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         </h3>
 
         <div>
-            <button type ="button" onclick="leerpdf('guiaPAT','./Documentos/PAT.pdf')" id="guiaPAT">
+            <button type ="button" onclick="leerpdf('https://repositorio.comillas.edu/xmlui/bitstream/handle/11531/53842/Gu%c3%ada%20Docente.pdf?sequence=-1&isAllowed=y')" id="guiaPAT">
                 Abrir Guia Docente
             </button>
         </div>
