--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         </h3>
 
         <div>
-            <button type ="button" onclick="leerpdf('guiaPAT','https://github.com/felixgims/felixgims.github.io/blob/main/Documentos/PAT.pdf')" id="guiaPAT">
+            <button type ="button" onclick="leerpdf('guiaPAT','./Documentos/PAT.pdf')" id="guiaPAT">
                 Abrir Guia Docente
             </button>
         </div>
