--- a/index.html
+++ b/index.html
@@ -253,9 +253,7 @@
         </h3>
 
         <div>
-            <button type ="button" onclick="leerpdf('guiaPAT','./Documentos/PAT.pdf')" id="guiaPAT">
-                Abrir Guia Docente
-            </button>
+            <button type ="button" onclick="leerpdf('guiaPAT','https://repositorio.comillas.edu/xmlui/bitstream/handle/11531/53842/Gu%c3%ada%20Docente.pdfff')" id="guiaPAT">Abrir Guia Docente</button>
         </div>
         
         
